--- a/HTML_TechDoc/styles.css
+++ b/HTML_TechDoc/styles.css
@@ -29,7 +29,8 @@ margin-bottom: 110px;
 
 #navbar{
 position: fixed;
-min-width: 25%;
+min-width: 200px;
+width: 300px;
 top: 0px;
 left: 0px;
 height: 100%;
@@ -85,13 +86,13 @@ span{
 
 
 
-nav > ul > li > a{
+.nav-link{
     color: #272727;
 }
-nav > ul > li > a:hover{
+.nav-link:hover{
     color: #474747;
 }
-nav > ul > li > a:active{
+.nav-linkactive{
     color: #000000;
 }
 a{
@@ -121,6 +122,8 @@ main a{
 main a:hover{
     color: #062640;
 }
-main a:active{
-    color: #051624;
-}
+@media (max-width: 700px) {
+    #navbar{
+        width: 25%;
+    }
+  }
