--- a/CSS_City/styles.css
+++ b/CSS_City/styles.css
@@ -126,7 +126,7 @@ body {
   height: 5%;
   background-color: var(--building-color4);
 }
-  
+
 .bb4c {
   width: 100%;
   height: 85%;
@@ -156,7 +156,7 @@ body {
   height: 10%;
   background-color: var(--building-color4);
 }
-  
+
 .fb1c {
   width: 100%;
   height: 80%;
@@ -203,13 +203,13 @@ body {
   width: 10%;
   height: 35%;
 }
-  
+
 .fb3a {
   width: 80%;
   height: 15%;
   background-color: var(--building-color1);
 }
-  
+
 .fb3b {
   width: 100%;
   height: 35%;
@@ -249,6 +249,7 @@ body {
   background-color: var(--window-color1);
   margin: 10%;
 }
+
 .fb5 {
   width: 10%;
   height: 33%;
@@ -271,6 +272,18 @@ body {
 .fb6 {
   width: 9%;
   height: 38%;
-  background-color: var(--building-color3);
+
+  background: repeating-linear-gradient(
+      90deg,
+      var(--building-color3),
+      var(--building-color3) 10%,
+      transparent 10%,
+      transparent 30%
+    ),
+    repeating-linear-gradient(
+      var(--building-color3),
+      var(--building-color3) 10%,
+      var(--window-color3) 10%,
+      var(--window-color3) 30%
+    );
 }
-    
