--- a/CSS_City/styles.css
+++ b/CSS_City/styles.css
@@ -10,7 +10,6 @@
 }
 
 * {
-  border: 1px solid black;
   box-sizing: border-box;
 }
 
@@ -41,7 +40,16 @@ body {
   align-items: center;
   justify-content: space-evenly;
 }
+.sky {
+  background: radial-gradient(
 
+    circle closest-corner at 15% 15%,
+      #ffcf33,
+      #ffcf33 20%,
+      #ffff66 21%,
+      #bbeeff 100%
+    );
+}
 /* BACKGROUND BUILDINGS - "bb" stands for "background building" */
 .bb1 {
   width: 10%;
@@ -126,7 +134,7 @@ body {
   height: 5%;
   background-color: var(--building-color4);
 }
-
+  
 .bb4c {
   width: 100%;
   height: 85%;
@@ -156,7 +164,7 @@ body {
   height: 10%;
   background-color: var(--building-color4);
 }
-
+  
 .fb1c {
   width: 100%;
   height: 80%;
@@ -203,13 +211,13 @@ body {
   width: 10%;
   height: 35%;
 }
-
+  
 .fb3a {
   width: 80%;
   height: 15%;
   background-color: var(--building-color1);
 }
-
+  
 .fb3b {
   width: 100%;
   height: 35%;
@@ -269,10 +277,10 @@ body {
       var(--window-color2) 44%
     );
 }
+
 .fb6 {
   width: 9%;
   height: 38%;
-
   background: repeating-linear-gradient(
       90deg,
       var(--building-color3),
@@ -287,3 +295,4 @@ body {
       var(--window-color3) 30%
     );
 }
+    
