--- a/HTML_LandingPage/styles.css
+++ b/HTML_LandingPage/styles.css
@@ -7,7 +7,7 @@
 html{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 16px;
-    background-color: #fdfdfd;
+    background-color: #eee;
 }    
 
 #page-wrapper {
@@ -22,7 +22,7 @@ padding: 0px 30px;
 display: flex;
 justify-content: space-around;
 align-items: center;
-background-color: #e7e7e7;
+background-color: #eee;
 width: 100%;
 }
 .nav-link{
@@ -62,3 +62,51 @@ nav > ul {
     .logo {
         width: 60vw;
         }
+        
+#hero {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            height: 200px;
+            margin-top: 50px;
+            }
+form{
+    display: block;
+}
+#hero input[type='email'] {
+    max-width: 275px;
+    width: 100%;
+    padding: 5px;
+    }
+#hero > h2 {
+        margin-bottom: 20px;
+        word-wrap: break-word;
+        }
+#hero input[type='submit'] {
+            max-width: 150px;
+            width: 100%;
+            height: 30px;
+            margin: 15px 0;
+            border: 0;
+            background-color: #f1c40f;
+            }
+#hero input[type='submit']:hover{
+    background-color: #d9b113;
+}
+#hero input[type='submit']:active, #hero input[type='submit']:visited{
+    background-color: #9f810c;
+    color: #fff;
+}
+.button{
+                padding: 0 20px;
+                height: 40px;
+                font-size: 0.7em;
+                font-weight: 900;
+                text-transform: uppercase;
+                border: 3px black solid;
+                border-radius: 8px;
+                background: transparent;
+                cursor: pointer;
+                }
